syntax = "proto3";

package service;

option go_package = "../service";

message CheckBalanceMessage{
    int32 lopeiId = 1;
}

message PaymentMessage{
    int32 lopeiId = 1;
    float amount = 2;
}

message Error{
    string code = 1;
    string message = 2;
}

message ResultMessage{
    string result = 1;
    Error error = 2;
}

service LopeiPayment{
    rpc CheckBalance(CheckBalanceMessage) returns (ResultMessage){}
    rpc DoPayment(PaymentMessage) returns (ResultMessage){}
}